# ai_orz

./: .env  .gitignore  AGENTS.md  Cargo.toml  MEMORY.md  README.md  ai_orz.toml  build-full.sh  start-dev.sh  test.db
.sqlx/: query-0158498234c4764a03437c0f23cc3d95e2035999ba87a3a082ca1e86b574b765.json  query-01de05ea22c3c63151e35af579da527400c15396a125c8e3cd5ec50f1f0cde1c.json  query-0295ed1026483a8ac7e45e704528e47968e60f369bed83178192bc388c03b9b2.json  query-02df1eaa9119585516a2987082896138570199d5edb8133fd8d212f462b02808.json  query-05176e47fb4fff398356133a213dcc9a30554cf42e24833d9abe92fa1134de2c.json  query-0745b6ea13727681580203fecfa4f4f21e7df2ab31848284bb418ef4f1aaa075.json  query-078967b7979e78d7420cf80da536d74194ce51819c23b8c31947eaff1bda5a7f.json  query-080df957899e218860832e5923e12a2c5dc86f78e26b3c6ff91955f6f19df678.json  query-089ddd73d834db73f20b5595b8e5c544203b9ded5cf558104f25f40d58732c05.json  query-0a276565fb827bb25a6d503fc04acab7f0503d09c1ce810b9883563f52af99eb.json  query-0ab7db3b7d99963b1674890323c75123326d290aa0d7657edb100f1d47153c83.json  query-0ab84459a197ba216f74b33494424927d8d1d6f0486d9018ba008b6738945a9e.json  query-0d073f4e2cbc0f4f298d5ab31f33e45642e30b7fdc5cea99afd84db9a54340b3.json  query-0db711f8b9ed6836cc3205de3589a6f2b692ea5635c0e36ee329091c32c57be7.json  query-0dc0a78cfa0e0b7b8f6e7fd927bb0cf7170c51d3e5ffff37e0eb853b8747ef33.json  query-0e40345b1991d1029637e41e5ac734291f36b83df2584b3a91d04c152d958538.json  query-0eca99599017d72aee2f2ed856e1a67789c961d3d995ffac75e03a83f1d3aaf3.json  query-0ecc7b0fe9de48a5e460f70eb1a861de11b1affaff515aed46f5389e3bac7dc0.json  query-1147cca314378321cb7341350d67aeba5c07043395c510caa9fed46546ccc9b1.json  query-1172f05a7ee614fa4e80a4d7f87e22d6378344af81dd60ba5100696828a36eb9.json  query-1179dc7ec87d9327e78ce333f84df31c2d7b396c475643c693c9d36d6af0b84e.json  query-15a0f356058a34ace72beb13a218dc5b3d61372a46f9dfa853f9d2c72b621530.json  query-1a5142d54f44aee96586912357ce72e8a05908e9e76a58e57d5e8337a37a4189.json  query-1be437238bc1a3e7026005f8a96695142ba7e0736be7fc0698b17f7f3a81280f.json  query-1fe1f8ce605060b658a9d95fb54e9a36e1b9476e43c280544b097cd2a24755ab.json  query-20dac1dd693d42ebd8c70caefc80a2ffe7030a0eddd3202d3e30cf39f2143e65.json  query-2376b7eb9724123312e21d936887068ff7ae14e687d55896fa1a9bb33e06483d.json  query-23b2d80c91260d8798b83442edbf2ab6d7bacd2a02e864dd5ad8486b9d724ec6.json  query-27360474888fb8133ef8987bca5aeb3124f80d424a3d26afc08c0b57e5340dc1.json  query-298470195db54b1cbc842489ab00b9e00b08570a14a7a2147b0bc85ba368c561.json  query-29cc80c6da1cd534ea4df72a2536ca12c1f82fcdd1b1445e4213260bb9862b6a.json  query-2ac71bfa0dcbcac4a8fcf01ef73267236228e681446dbf56ba842c5c369b607f.json  query-2c0dd08d7abcc5bb6d13ad0813a6f83c03498413d605fdd55b7035a92ff2060c.json  query-2c283348a9f9106ca235fec2c8e6c3584e7997635da488ddf074f6628540a64d.json  query-2ec8c72f5ced411f09a5fbca11ce167afce367b629551e891842aba098a982c5.json  query-31ab8ff24fe132ee49316bd24af9b202a905664a7ad5502476907c293bbb2445.json  query-31c86faed6b3689d01057666ba39efff7b18544f023d62d8881409903180bf7f.json  query-3684d9ca513967311c9bc196b7b21b2b5ef5d8910621d6349defae5bca2fc43e.json  query-382898bc87ed98d8c18fa54e20c32e2b328f1b6128ac66ddc7c55aef68578598.json  query-38d98ff0617e8f95dba229bd2c8ab219335b2a630eb4b4df8950912a42db2e9c.json  (+146 more)
common/: Cargo.toml
common/config/: ai_orz.toml
common/src/: config.rs  lib.rs
common/src/api/: agent.rs  auth.rs  config.rs  mod.rs  model_provider.rs  organization.rs  user.rs
common/src/constants/: http_header.rs  mod.rs  provider_type.rs  request_context.rs  status.rs  utils.rs
common/src/enums/: agent.rs  file.rs  memory.rs  message.rs  mod.rs  organization.rs  project.rs  provider.rs  skill.rs  task.rs  tool.rs  user.rs  user_role.rs
config/: ai_orz.toml
docs/: AGENTS.md  ARCHITECTURE.md  LAYERED_ARCHITECTURE_PRACTICE.md  MEMORY_DESIGN.md  NAMING_CONVENTION.md  PROJECT.md  attachment_storage.md  event_design.md  message_interaction_design.md  organization_design.md  project_design.md  skill_design.md  sqlx_guide.md  task_design.md  tool_design.md
frontend/: Cargo.toml  build.rs  index.html
frontend/src/: config.rs  main.rs
frontend/src/api/: agent.rs  health.rs  mod.rs  model_provider.rs  organization.rs
frontend/src/components/: agent_management.rs  employee_management.rs  health_check.rs  mod.rs  model_provider_management.rs  navbar.rs  organization_info.rs  reception.rs  settings_page.rs  user_management.rs  user_profile.rs
guide/: agent_management_integration.md  api_test.md
migrations/: 20260411000000_initial.sql  20260417000000_create_tools.sql  20260419000000_add_message_context.sql  20260420000000_initial.sql  20260424100000_recreate_skills_add_author_type.sql  20260428100000_add_reply_to_id_to_messages.sql  (+1 more)
src/: config.rs  error.rs  lib.rs  (+2 more)
(+233 files in other folders)
