[workspace]
members = [
    ".",
    "frontend",
]
resolver = "2"

[package]
name = "ai_orz"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.39", features = ["bundled"] }
toml = "1"
tower-http = { version = "0.6", features = ["fs"] }
rig-core = { version = "0.33.0", features = ["all"] }
async-trait = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "std"] }
sha256 = "1.1"
rand = "0.8"
tracing-appender = "0.2.4"
