[package]
name = "common"
version = "0.1.0"
edition = "2021"

# Common types shared between backend and frontend
[dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8", default-features = false }
http = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "macros"], default-features = false }

