[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[build-dependencies]
common = { path = "../common" }
toml = "0.8"
serde_json = "1.0"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Performance", "Storage"] }
tracing = "0.1"
common = { path = "../common" }
